platform/stack/packages/application/harbor/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    argocd.argoproj.io/sync-wave: "100"
    nginx.ingress.kubernetes.io/rewrite-target: /harbor/$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: "nginx"
  rules:
    - host: adhar.localtest.me
      http:
        paths:
          - path: /harbor(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-portal
                port:
                  number: 80
